@@ -1,17 +1,17 @@
 import pagetemplate
 
-class TextTemplate(pagetemplate.ZopePageTemplate):
-    __doc__ = pagetemplate.ZopePageTemplate.__doc__ # for Sphinx autodoc
+class TextTemplate(pagetemplate.PageTemplate):
+    __doc__ = pagetemplate.PageTemplate.__doc__ # for Sphinx autodoc
     format = 'text'
 
-class TextTemplateFile(pagetemplate.ZopePageTemplateFile):
-    __doc__ = pagetemplate.ZopePageTemplateFile.__doc__ # for Sphinx autodoc
+class TextTemplateFile(pagetemplate.PageTemplateFile):
+    __doc__ = pagetemplate.PageTemplateFile.__doc__ # for Sphinx autodoc
     format = 'text'
 
 class ViewTextTemplate(pagetemplate.ViewPageTemplate):
     __doc__ = pagetemplate.ViewPageTemplate.__doc__ # for Sphinx autodoc
-    template_class = TextTemplate
-        
+    format = 'text'
+    
 class ViewTextTemplateFile(pagetemplate.ViewPageTemplateFile):
     __doc__ = pagetemplate.ViewPageTemplateFile.__doc__ # for Sphinx autodoc
-    template_class = TextTemplateFile
+    format = 'text'
